--- a/src/components/Promotional/Promotional.css
+++ b/src/components/Promotional/Promotional.css
@@ -13,33 +13,50 @@
     justify-content: space-around;
 }
 
-@media (max-width: 500px){
+@media (max-width: 500px) {
     .promo {
         display: block;
     }
 }
 
 
-    @keyframes btn-pulse {
-        0% { transform:scale(0.8) }
-        50% { transform:scale(1.0) }
-        100% { transform:scale(0.8) }
+@keyframes btn-pulse {
+    0% {
+        transform: scale(0.8)
     }
-   .btn-pulse {
-      background-color:#89C63C;
-      color:#fff;
-      display: inline-block;
-      text-decoration: none;
-      border-radius: 4px; 
-      -webkit-animation: btn-pulse .6s linear infinite;
-      -moz-animation: btn-pulse .6s linear infinite;
-      -ms-animation: btn-pulse .6s linear infinite;
-      -o-animation: btn-pulse .7s linear infinite;
-      animation: btn-pulse .6s linear infinite;
-   }
+    50% {
+        transform: scale(1.0)
+    }
+    100% {
+        transform: scale(0.8)
+    }
+}
+
+.btn-pulse {
+    background-color: #89C63C;
+    color: #fff;
+    display: inline-block;
+    text-decoration: none;
+    border-radius: 4px;
+    -webkit-animation: btn-pulse .6s linear infinite;
+    -moz-animation: btn-pulse .6s linear infinite;
+    -ms-animation: btn-pulse .6s linear infinite;
+    -o-animation: btn-pulse .7s linear infinite;
+    animation: btn-pulse .6s linear infinite;
+}
 
 
-   @media (max-width: 500px){
+@media (max-width: 500px) {
+    .container {
+        padding: 0 !important;
+    }
+
+      /*  .grid{
+            display: flex !important;
+            border: 1px solid red;
+        }*/
+
+
     .containerDias {
         display: flex;
         flex-wrap: wrap;
